module2-solution/style.css
* {
	box-sizing: border-box;
  font-family: "Times New Roman", Times, serif;
}

/* column set up */
@media (min-width: 992px) {
  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
    float: left;
    /* border: 1px solid rgb(154, 16, 85); */
    height: 300px;
  }
  .col-lg-1 {
    width: 8.33%;
  }
  .col-lg-2 {
    width: 16.66%;
  }
  .col-lg-3 {
    width: 25%;
  }
  .col-lg-4 {
    width: 33.33%;
  }
  .col-lg-5 {
    width: 41.66%;
  }
  .col-lg-6 {
    background-color: green;
    width: 50%;
  }
  .col-lg-7 {
    width: 58.33%;
  }
  .col-lg-8 {
    width: 66.66%;
  }
  .col-lg-9 {
    width: 74.99%;
  }
  .col-lg-10 {
    width: 83.33%;
  }
  .col-lg-11 {
    width: 91.66%;
  }
  .col-lg-12 {
    width: 100%;
  }
  
}



@media (min-width: 768px) and (max-width: 991px) {
  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
    float: left;
    /* border: 1px solid green; */
     height: 300px;
  }
  .col-md-1 {
    width: 8.33%;
  }
  .col-md-2 {
    width: 16.66%;
  }
  .col-md-3 {
    width: 25%;
  }
  .col-md-4 {
    width: 33.33%;
  }
  .col-md-5 {
    width: 41.66%;
  }
  .col-md-6 {
    width: 50%;
  }
  .col-md-7 {
    width: 58.33%;
  }
  .col-md-8 {
    width: 66.66%;
  }
  .col-md-9 {
    width: 74.99%;
  }
  .col-md-10 {
    width: 83.33%;
  }
  .col-md-11 {
    width: 91.66%;
  }
  .col-md-12 {
    width: 100%;
  }
}


@media (max-width: 767px) {
  .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
    float: left;
    /* border: 1px solid green; */
    height: 200px;
  }
  .col-xs-1 {
    width: 8.33%;
  }
  .col-xs-2 {
    width: 16.66%;
  }
  .col-xs-3 {
    width: 25%;
  }
  .col-xs-4 {
    width: 33.33%;
  }
  .col-xs-5 {
    width: 41.66%;
  }
  .col-xs-6 {
    width: 50%;
  }
  .col-xs-7 {
    width: 58.33%;
  }
  .col-xs-8 {
    width: 66.66%;
  }
  .col-xs-9 {
    width: 74.99%;
  }
  .col-xs-10 {
    width: 83.33%;
  }
  .col-xs-11 {
    width: 91.66%;
  }
  .col-xs-12 {
    width: 100%;
  }

}


.row {
  margin-top: 30px;
	width: 100%;

  /* clear: both; */
}


p {
  float: left;
  margin-top: 5%;
  padding-left: 10px;
  padding-right: 10px;
  font-weight: bold;
  color:rgb(2, 37, 2);
  opacity: initial;
}




.subheading {
  width: 35%;
  height: 17%;
  float: right;
  margin: 0px;
  color: rgb(35, 54, 7);
  font-size: 26px;
  font-weight: lighter;
  text-align: center;
  /* margin-right: 10px; */
  border: 2px solid paleturquoise;
  background-color: rgb(120, 120, 252);
  clear: both;
}





.text_block {
  background-color: azure;
  border: 2px solid pink;
  margin-top: auto;
  margin-bottom: auto;
  height: 90%;
  margin: 15px;
}


.front-header {
  margin-top: 3%;
  margin-bottom: 5%;
  font-size: 300%;
  text-align: center;
  color: rgb(68, 13, 13);
  opacity: 80%;
  /* background-color: brown; */
}

.subheading {
  display: flex;
  justify-content: center;
  align-items: center;
}

